rework test route handling, new data version, id issue with data around eccles line